--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,112 @@
 * {
-    margin: 0%
+    margin: 0;
 }
 
-
-.linqet {
+.ballinaKryesore{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    background-color: blue;
-    width: 40%;
+    justify-content: space-between; 
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #D1B29A;
+    margin:0% ;
+}
+
+html, body {
+    height: 100%; 
+}
+
+.linqet {
+    display: flex; 
+    gap: 16px; 
+}
+
+
+.linqet a {
+    text-decoration: none; 
+    color: grey;
+    font-weight: 500;
+    font-size: 16px;
+    transition: color 0.3s ; 
+}
+
+a:hover{
+    color: rgb(0, 102, 255);
+}
+
+
+.Llogo{
+    width: 110px;
+    height: 110px;
+    border-radius: 15px;
+    box-shadow: 5px 10px 2px rgba(0, 0, 0, 0.5);
+    margin-right: 100px;
+}
+
+.contact{
+    display:flex ;
+    justify-content: end;
+    align-items: center;
+}
+
+.search{
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    background-color: #D1B29A;
+    border: none;
+}
+
+.Mundsite {
+    text-align: center;
     
 }
+
+.pytja {
+    font-size: 50px;
+    margin-top: 30px;
+}
+
+.image-container {
+    position: relative;
+    display: inline-block;
+    width: 45%;
+    
+    
+    
+}
+
+.image-container img {
+    width: 100%; 
+    height: auto;
+    margin-top: 50px;
+}
+
+.image-container a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.5);  /* Sfond i errët pas lidhjes */
+    padding: 10px;
+}
+
+.shigjeta{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+hr{
+    width: 90%;  /* Ndryshoni për të kontrolluar gjerësinë */
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+
